[gd_scene load_steps=22 format=2]

[ext_resource path="res://Textures/bg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/fin/Ganar.gd" type="Script" id=2]
[ext_resource path="res://Textures/Black.png" type="Texture" id=3]
[ext_resource path="res://Font/pixeled/Pixeled.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Textures/restart.png" type="Texture" id=5]
[ext_resource path="res://Textures/exit.png" type="Texture" id=6]
[ext_resource path="res://Music/Music3.ogg" type="AudioStream" id=7]
[ext_resource path="res://Escenas/SFX/SFX.tscn" type="PackedScene" id=8]
[ext_resource path="res://Escenas/Guardar/NG.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "anim"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Canvas/black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/ScoreRed:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1.5, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 320 ), Vector2( 0, 320 ), Vector2( 0, 320 ), Vector2( 0, 70 ), Vector2( 0, 70 ), Vector2( 192, 70 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/ScoreBlue:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1.5, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 384, 320 ), Vector2( 384, 320 ), Vector2( 384, 320 ), Vector2( 384, 70 ), Vector2( 384, 70 ), Vector2( 192, 70 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Title:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/ScoreRed:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.8, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/ScoreBlue:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.8, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/ScoreTotal:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.8, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/ScoreTotal:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4.3, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 72 ), Vector2( 128, 72 ), Vector2( 128, 76 ), Vector2( 128, -50 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/buttons:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 5.8, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -160 ) ]
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=11]
resource_name = "anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 300, 200 )

[node name="Ganar" type="Node2D"]
script = ExtResource( 2 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 992, -144 )
scale = Vector2( 4.11404, 4.11404 )
texture = ExtResource( 1 )

[node name="start" type="AnimationPlayer" parent="."]
anims/anim = SubResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouWin" type="Label" parent="Control/Title"]
margin_left = 128.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "You Win"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red" type="Label" parent="Control/Title"]
margin_left = 256.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Red"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blue" type="Label" parent="Control/Title"]
margin_left = 256.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.0156863, 1, 1 )
text = "Blue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tie" type="Label" parent="Control/Title"]
margin_left = 128.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "emm...
tie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreRed" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 192.0
margin_top = 70.0
margin_right = 320.001
margin_bottom = 134.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBlue" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 192.0
margin_top = 70.0
margin_right = 319.999
margin_bottom = 134.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="ScoreTotal" type="Label" parent="Control"]
margin_left = 128.0
margin_top = -50.0
margin_right = 384.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="Control"]
margin_top = -160.0
margin_right = 40.0
margin_bottom = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SR" type="Label" parent="Control/buttons"]
margin_left = 128.0
margin_top = 392.0
margin_right = 192.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SB" type="Label" parent="Control/buttons"]
margin_left = 320.0
margin_top = 392.0
margin_right = 384.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TouchScreenButton" parent="Control/buttons"]
position = Vector2( 192, 384 )
scale = Vector2( 4, 4 )
normal = ExtResource( 5 )
shape = SubResource( 9 )

[node name="exit" type="TouchScreenButton" parent="Control/buttons"]
position = Vector2( 256, 384 )
scale = Vector2( 4, 4 )
normal = ExtResource( 6 )
shape = SubResource( 10 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="black" type="Sprite" parent="Canvas"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 284, 144 )
scale = Vector2( 9.875, 5.5 )
texture = ExtResource( 3 )

[node name="end" type="AnimationPlayer" parent="Canvas/black"]
anims/anim = SubResource( 11 )

[node name="speed" type="TouchScreenButton" parent="."]
shape = SubResource( 12 )

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="SFX" parent="." instance=ExtResource( 8 )]

[node name="NG" parent="." instance=ExtResource( 9 )]
[connection signal="pressed" from="Control/buttons/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="Canvas/black/end" to="." method="_on_end_animation_finished"]
[connection signal="pressed" from="speed" to="." method="_on_speed_pressed"]
[connection signal="released" from="speed" to="." method="_on_speed_released"]
